# indescript-type-system-practice

./: README.md  stack.yaml
simple-kind-inference/: simple-kind-inference.cabal
simple-kind-inference/app/: Main.hs
simple-kind-inference/src/Control/Monad/: KI.hs
simple-kind-inference/src/Data/KindInfer/: BasicType.hs
simple-kind-inference/src/TypeSystem/: KindInfer.hs
simple-kind-inference/test/: Spec.hs
