name:                simple-kind-inference
version:             0.1.0.0
synopsis:            Simplest kind inference.
description:         Please see README.md
homepage:            http://github.com/githubuser/simple-kind-inference#readme
license:             BSD3
license-file:        LICENSE
author:              Minsheng Liu
maintainer:          lambda@liu.ms
copyright:           2015 Minsheng Liu
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.KI
                     , Data.KindInfer.BasicType
                     , TypeSystem.KindInfer
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , STMonadTrans
  default-language:    Haskell2010

executable simple-kind-inference-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple-kind-inference
  default-language:    Haskell2010

test-suite simple-kind-inference-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
                     , simple-kind-inference
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
